MB-19179: Disable WAL seqtree if FDB_SEQTREE_NOT_USE

This fixes crashes in cbft and also improves point query perf

Change-Id: If15c72d39119b215b7c5566e51ac5faee455978f
Reviewed-on: http://review.couchbase.org/62877
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Chiyoung Seo <chiyoung@couchbase.com>