src/wal.cc
@@ -106,17 +106,42 @@ fdb_status wal_init(struct filemgr *file, int nbucket)
     num_shards = wal_get_num_shards(file);
     file->wal->key_shards = (wal_shard_by_key *)
         malloc(sizeof(struct wal_shard_by_key) * num_shards);
-    file->wal->seq_shards = (wal_shard_by_seq *)
-        malloc(sizeof(struct wal_shard_by_seq) * num_shards);
+    if (file->config->seqtree_opt == FDB_SEQTREE_USE) {
+        file->wal->seq_shards = (wal_shard_by_seq *)
+            malloc(sizeof(struct wal_shard_by_seq) * num_shards);
+    } else {
+        file->wal->seq_shards = NULL;
+    }
 
     for (int i = num_shards - 1; i >= 0; --i) {
         avl_init(&file->wal->key_shards[i].map_bykey, NULL);
-        avl_init(&file->wal->seq_shards[i].map_byseq, NULL);
         spin_init(&file->wal->key_shards[i].lock);
-        spin_init(&file->wal->seq_shards[i].lock);
+        if (file->config->seqtree_opt == FDB_SEQTREE_USE) {
+            avl_init(&file->wal->seq_shards[i].map_byseq, NULL);
+            spin_init(&file->wal->seq_shards[i].lock);
+        }
     }
 
     DBG("wal item size %" _F64 "\n", sizeof(struct wal_item));
+    return FDB_RESULT_SUCCESS;
+}
+
+fdb_status wal_destroy(struct filemgr *file)
+{
+    size_t i = 0;
+    size_t num_shards = wal_get_num_shards(file);
+    // Free all WAL shards
+    for (; i < num_shards; ++i) {
+        spin_destroy(&file->wal->key_shards[i].lock);
+        if (file->config->seqtree_opt == FDB_SEQTREE_USE) {
+            spin_destroy(&file->wal->seq_shards[i].lock);
+        }
+    }
+    spin_destroy(&file->wal->lock);
+    free(file->wal->key_shards);
+    if (file->config->seqtree_opt == FDB_SEQTREE_USE) {
+        free(file->wal->seq_shards);
+    }
     return FDB_RESULT_SUCCESS;
 }
 
@@ -169,27 +194,31 @@ INLINE fdb_status _wal_insert(fdb_txn *txn,
 
             if (item->txn == txn && !(item->flag & WAL_ITEM_COMMITTED)) {
                 item->flag &= ~WAL_ITEM_FLUSH_READY;
-                // overwrite existing WAL item
 
-                size_t seq_shard_num = item->seqnum % file->wal->num_shards;
-                if (caller == WAL_INS_WRITER) {
-                    spin_lock(&file->wal->seq_shards[seq_shard_num].lock);
-                }
-                avl_remove(&file->wal->seq_shards[seq_shard_num].map_byseq,
-                           &item->avl_seq);
-                if (caller == WAL_INS_WRITER) {
-                    spin_unlock(&file->wal->seq_shards[seq_shard_num].lock);
-                }
+                if (file->config->seqtree_opt == FDB_SEQTREE_USE) {
+                    size_t seq_shard_num = item->seqnum % file->wal->num_shards;
+                    if (caller == WAL_INS_WRITER) {
+                        spin_lock(&file->wal->seq_shards[seq_shard_num].lock);
+                    }
+                    avl_remove(&file->wal->seq_shards[seq_shard_num].map_byseq,
+                               &item->avl_seq);
+                    if (caller == WAL_INS_WRITER) {
+                        spin_unlock(&file->wal->seq_shards[seq_shard_num].lock);
+                    }
 
-                item->seqnum = doc->seqnum;
-                seq_shard_num = doc->seqnum % file->wal->num_shards;
-                if (caller == WAL_INS_WRITER) {
-                    spin_lock(&file->wal->seq_shards[seq_shard_num].lock);
-                }
-                avl_insert(&file->wal->seq_shards[seq_shard_num].map_byseq,
-                           &item->avl_seq, _wal_cmp_byseq);
-                if (caller == WAL_INS_WRITER) {
-                    spin_unlock(&file->wal->seq_shards[seq_shard_num].lock);
+                    item->seqnum = doc->seqnum;
+                    seq_shard_num = doc->seqnum % file->wal->num_shards;
+                    if (caller == WAL_INS_WRITER) {
+                        spin_lock(&file->wal->seq_shards[seq_shard_num].lock);
+                    }
+                    avl_insert(&file->wal->seq_shards[seq_shard_num].map_byseq,
+                               &item->avl_seq, _wal_cmp_byseq);
+                    if (caller == WAL_INS_WRITER) {
+                        spin_unlock(&file->wal->seq_shards[seq_shard_num].lock);
+                    }
+                } else {
+                    // just overwrite existing WAL item
+                    item->seqnum = doc->seqnum;
                 }
 
                 // mark previous doc region as stale
@@ -272,14 +301,16 @@ INLINE fdb_status _wal_insert(fdb_txn *txn,
                 atomic_add_uint64_t(&file->wal->datasize, doc->size_ondisk);
             }
 
-            size_t seq_shard_num = doc->seqnum % file->wal->num_shards;
-            if (caller == WAL_INS_WRITER) {
-                spin_lock(&file->wal->seq_shards[seq_shard_num].lock);
-            }
-            avl_insert(&file->wal->seq_shards[seq_shard_num].map_byseq,
-                      &item->avl_seq, _wal_cmp_byseq);
-            if (caller == WAL_INS_WRITER) {
-                spin_unlock(&file->wal->seq_shards[seq_shard_num].lock);
+            if (file->config->seqtree_opt == FDB_SEQTREE_USE) {
+                size_t seq_shard_num = doc->seqnum % file->wal->num_shards;
+                if (caller == WAL_INS_WRITER) {
+                    spin_lock(&file->wal->seq_shards[seq_shard_num].lock);
+                }
+                avl_insert(&file->wal->seq_shards[seq_shard_num].map_byseq,
+                           &item->avl_seq, _wal_cmp_byseq);
+                if (caller == WAL_INS_WRITER) {
+                    spin_unlock(&file->wal->seq_shards[seq_shard_num].lock);
+                }
             }
             // insert into header's list
             list_push_front(&header->items, &item->list_elem);
@@ -342,15 +373,17 @@ INLINE fdb_status _wal_insert(fdb_txn *txn,
             atomic_add_uint64_t(&file->wal->datasize, doc->size_ondisk);
         }
 
-        size_t seq_shard_num;
-        seq_shard_num = doc->seqnum % file->wal->num_shards;
-        if (caller == WAL_INS_WRITER) {
-            spin_lock(&file->wal->seq_shards[seq_shard_num].lock);
-        }
-        avl_insert(&file->wal->seq_shards[seq_shard_num].map_byseq,
-                   &item->avl_seq, _wal_cmp_byseq);
-        if (caller == WAL_INS_WRITER) {
-            spin_unlock(&file->wal->seq_shards[seq_shard_num].lock);
+        if (file->config->seqtree_opt == FDB_SEQTREE_USE) {
+            size_t seq_shard_num;
+            seq_shard_num = doc->seqnum % file->wal->num_shards;
+            if (caller == WAL_INS_WRITER) {
+                spin_lock(&file->wal->seq_shards[seq_shard_num].lock);
+            }
+            avl_insert(&file->wal->seq_shards[seq_shard_num].map_byseq,
+                       &item->avl_seq, _wal_cmp_byseq);
+            if (caller == WAL_INS_WRITER) {
+                spin_unlock(&file->wal->seq_shards[seq_shard_num].lock);
+            }
         }
 
         // insert into header's list
@@ -452,6 +485,9 @@ static fdb_status _wal_find(fdb_txn *txn,
         }
         spin_unlock(&file->wal->key_shards[shard_num].lock);
     } else {
+        if (file->config->seqtree_opt != FDB_SEQTREE_USE) {
+            return FDB_RESULT_INVALID_CONFIG;
+        }
         // search by seqnum
         struct wal_item_header temp_header;
 
@@ -555,12 +591,15 @@ fdb_status wal_txn_migration(void *dbhandle,
                     // insert into new_file's WAL
                     wal_insert(item->txn, new_file, &doc, offset,
                                WAL_INS_WRITER);
-                    // remove from seq map
-                    size_t shard_num = item->seqnum % num_shards;
-                    spin_lock(&old_file->wal->seq_shards[shard_num].lock);
-                    avl_remove(&old_file->wal->seq_shards[shard_num].map_byseq,
-                               &item->avl_seq);
-                    spin_unlock(&old_file->wal->seq_shards[shard_num].lock);
+                    if (old_file->config->seqtree_opt == FDB_SEQTREE_USE) {
+                        // remove from seq map
+                        size_t shard_num = item->seqnum % num_shards;
+                        spin_lock(&old_file->wal->seq_shards[shard_num].lock);
+                        avl_remove(&old_file->wal->seq_shards[shard_num].map_byseq,
+                                   &item->avl_seq);
+                        spin_unlock(&old_file->wal->seq_shards[shard_num].lock);
+                    }
+
                     // remove from header's list
                     e = list_remove_reverse(&header->items, e);
                     // remove from transaction's list
@@ -683,11 +722,13 @@ fdb_status wal_commit(fdb_txn *txn, struct filemgr *file,
                     !(_item->flag & WAL_ITEM_FLUSH_READY)) {
                     // remove from list & hash
                     list_remove(&item->header->items, &_item->list_elem);
-                    size_t seq_shard_num = _item->seqnum % file->wal->num_shards;
-                    spin_lock(&file->wal->seq_shards[seq_shard_num].lock);
-                    avl_remove(&file->wal->seq_shards[seq_shard_num].map_byseq,
-                               &_item->avl_seq);
-                    spin_unlock(&file->wal->seq_shards[seq_shard_num].lock);
+                    if (file->config->seqtree_opt == FDB_SEQTREE_USE) {
+                        size_t seq_shard_num = _item->seqnum % file->wal->num_shards;
+                        spin_lock(&file->wal->seq_shards[seq_shard_num].lock);
+                        avl_remove(&file->wal->seq_shards[seq_shard_num].map_byseq,
+                                   &_item->avl_seq);
+                        spin_unlock(&file->wal->seq_shards[seq_shard_num].lock);
+                    }
 
                     // mark previous doc region as stale
                     uint32_t stale_len = _item->doc_size;
@@ -770,7 +811,6 @@ static int _wal_flush_cmp(struct avl_node *a, struct avl_node *b, void *aux)
 INLINE void _wal_release_item(struct filemgr *file, size_t shard_num,
                               struct wal_item *item) {
     fdb_kvs_id_t kv_id;
-    size_t seq_shard_num;
     uint64_t mem_overhead = 0;
 
     // get KVS ID
@@ -781,11 +821,16 @@ INLINE void _wal_release_item(struct filemgr *file, size_t shard_num,
     }
 
     list_remove(&item->header->items, &item->list_elem);
-    seq_shard_num = item->seqnum % file->wal->num_shards;
-    spin_lock(&file->wal->seq_shards[seq_shard_num].lock);
-    avl_remove(&file->wal->seq_shards[seq_shard_num].map_byseq,
-                &item->avl_seq);
-    spin_unlock(&file->wal->seq_shards[seq_shard_num].lock);
+
+    if (file->config->seqtree_opt == FDB_SEQTREE_USE) {
+        size_t seq_shard_num;
+        seq_shard_num = item->seqnum % file->wal->num_shards;
+        spin_lock(&file->wal->seq_shards[seq_shard_num].lock);
+        avl_remove(&file->wal->seq_shards[seq_shard_num].map_byseq,
+                   &item->avl_seq);
+        spin_unlock(&file->wal->seq_shards[seq_shard_num].lock);
+    }
+
     if (list_begin(&item->header->items) == NULL) {
         // wal_item_header becomes empty
         // free header and remove from key map
@@ -1207,12 +1252,14 @@ fdb_status wal_discard(struct filemgr *file, fdb_txn *txn)
                                  file->wal->num_shards;
         spin_lock(&file->wal->key_shards[shard_num].lock);
 
-        // remove from seq map
-        seq_shard_num = item->seqnum % file->wal->num_shards;
-        spin_lock(&file->wal->seq_shards[seq_shard_num].lock);
-        avl_remove(&file->wal->seq_shards[seq_shard_num].map_byseq,
-                   &item->avl_seq);
-        spin_unlock(&file->wal->seq_shards[seq_shard_num].lock);
+        if (file->config->seqtree_opt == FDB_SEQTREE_USE) {
+            // remove from seq map
+            seq_shard_num = item->seqnum % file->wal->num_shards;
+            spin_lock(&file->wal->seq_shards[seq_shard_num].lock);
+            avl_remove(&file->wal->seq_shards[seq_shard_num].map_byseq,
+                       &item->avl_seq);
+            spin_unlock(&file->wal->seq_shards[seq_shard_num].lock);
+        }
 
         // remove from header's list
         list_remove(&item->header->items, &item->list_elem);
@@ -1312,12 +1359,15 @@ static fdb_status _wal_close(struct filemgr *file,
                         committed = true;
                         committed_item_action = item->action;
                     }
-                    // remove from seq hash table
-                    seq_shard_num = item->seqnum % num_shards;
-                    spin_lock(&file->wal->seq_shards[seq_shard_num].lock);
-                    avl_remove(&file->wal->seq_shards[seq_shard_num].map_byseq,
-                               &item->avl_seq);
-                    spin_unlock(&file->wal->seq_shards[seq_shard_num].lock);
+
+                    if (file->config->seqtree_opt == FDB_SEQTREE_USE) {
+                        // remove from seq hash table
+                        seq_shard_num = item->seqnum % num_shards;
+                        spin_lock(&file->wal->seq_shards[seq_shard_num].lock);
+                        avl_remove(&file->wal->seq_shards[seq_shard_num].map_byseq,
+                                   &item->avl_seq);
+                        spin_unlock(&file->wal->seq_shards[seq_shard_num].lock);
+                    }
 
                     if (item->action != WAL_ACT_REMOVE) {
                         atomic_sub_uint64_t(&file->wal->datasize, item->doc_size);
